--- a/index.HTML
+++ b/index.HTML
@@ -3,10 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My GitHub Pages</title>
+    <title>Alert Link</title>
 </head>
 <body>
-    <h1>Welcome to My GitHub Pages</h1>
-    <p>This is a simple HTML page hosted on GitHub Pages.</p>
+    <!-- Navigation Bar -->
+    <header>
+        <nav>
+            <ul>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <!-- Main Content -->
+    <section id="home">
+        <h1>Welcome to Alert Link</h1>
+        <p>Connect, share, and earn on our social commerce platform.</p>
+    </section>
+
+    <section id="about">
+        <h2>About Us</h2>
+        <p>Learn more about our mission and vision.</p>
+    </section>
+
+    <section id="contact">
+        <h2>Contact Us</h2>
+        <p>If you have questions, feel free to contact our support team.</p>
+    </section>
+
+    <!-- Footer -->
+    <footer>
+        <p>&copy; 2023 Alert Link</p>
+    </footer>
 </body>
 </html>
